syntax = "proto3";

package coordinator_proto;

service Call {
  rpc NewLedger(NewLedgerReq) returns (NewLedgerResp);
  rpc Append(AppendReq) returns (AppendResp);
  rpc ReadLatest(ReadLatestReq) returns (ReadLatestResp);
  rpc ReadByIndex(ReadByIndexReq) returns (ReadByIndexResp);
  rpc ReadViewByIndex(ReadViewByIndexReq) returns (ReadViewByIndexResp);
}

message IdSig {
  bytes id = 1;
  bytes sig = 2;
}

message Receipt {
  bytes view = 1;
  repeated IdSig id_sigs = 2;
}

message NewLedgerReq {
  bytes nonce = 1;  // This is a client chosen nonce.
  bytes app_bytes = 2;
}

message NewLedgerResp {
  bytes block = 1;
  Receipt receipt = 2;
}

message AppendReq {
  bytes handle = 1;
  bytes block = 2;
  bytes cond_tail_hash = 3;  // Ideally optional
}

message AppendResp {
  bytes prev = 1;
  uint64 height = 2;
  Receipt receipt = 3;
}

message ReadLatestReq {
  bytes handle = 1;
  bytes nonce = 2;
}

message ReadLatestResp {
  bytes block = 1;
  bytes prev = 2;
  uint64 height = 3;
  Receipt receipt = 4;
}

message ReadByIndexReq {
  bytes handle = 1;
  uint64 index = 2;
}

message ReadByIndexResp {
  bytes block = 1;
  bytes prev = 2;
  Receipt receipt = 3;
}

message ReadViewByIndexReq {
  uint64 index = 1;
}

message ReadViewByIndexResp {
  bytes block = 1;
  bytes prev = 2;
  Receipt receipt = 3;
}